Fri Sep 20 23:34:48 2013  Zachary Scott  <e@zzak.io>

	* benchmark/bm_app_answer.rb: removed duplicate code [Fixes GH-393]
	  https://github.com/ruby/ruby/pull/393

Fri Sep 20 23:24:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (btest, btest-ruby, test-knownbug): add $(RUN_OPTS) to
	  ruby to be run, so that tests are runnable before making exts.

	* common.mk (test-sample): ditto, and use $(MINIRUBY) as rubytest.rb
	  does not need extension libraries.

	* tool/rubytest.rb: pass $(RUN_OPTS) to testing ruby using --run-opt.

Fri Sep 20 15:01:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (intern_str): sigil only names are junk, at least one
	  identifier character is needed.  [ruby-dev:47723] [Bug #8928]

	* parse.y (rb_enc_symname_type): fix out of bound access.

Fri Sep 20 14:14:32 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/printf/printf.c (printf_test_call): Fix an end of buffer
	  argument.

Thu Sep 19 16:59:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lambda): adjust position to the beginning of the block.

Thu Sep 19 16:25:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (BSD_vfprintf): initialize cp so that size is 0 in the
	  commented case.  fix an accidental bug at r16716.

Thu Sep 19 14:33:14 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add a news for r42974.

Thu Sep 19 14:12:02 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: make Symbol objects frozen.
	  [Feature #8906]
	  I want to freeze this good day, too.

	* test/ruby/test_eval.rb: catch up this change.

	* test/ruby/test_symbol.rb: add a test to check frozen symbols.

Thu Sep 19 09:11:33 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS:  Update for RDoc 4.1.0.preview.1 and RubyGems 2.2.0.preview.1

Thu Sep 19 08:59:41 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/markdown/literals_1_9.rb:  Fix trailing whitespace.

	  Previously kpeg (which generates this file) added trailing