@@ -1,3 +1,8 @@
+Fri Sep 20 23:37:40 2013  Zachary Scott  <e@zzak.io>
+
+	* lib/securerandom.rb: [DOC] SecureRandom.hex length argument
+	  [Fixes GH-394] Patch by @avdi https://github.com/ruby/ruby/pull/394
+
 Fri Sep 20 23:34:48 2013  Zachary Scott  <e@zzak.io>
 
 	* benchmark/bm_app_answer.rb: removed duplicate code [Fixes GH-393]
